src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/Loan_Program?ID=&apos;+ Id , &quot;Edit&quot; ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicates whether the program is associate to a specific channel or bank partner</description>
        <label>Channel partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Name__c</fullName>
        <label>Unique Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country_Mapping__c</fullName>
        <formula>CASE( Country__c , &apos;UK&apos;, &apos;UK&apos;, &apos;PH&apos;, &apos;Philippines&apos;,&apos;SG&apos;,&apos;Singapore&apos;,&apos;HK&apos;,&apos;Hong Kong&apos;,&apos;UK&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>UK</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DWH_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWH Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>It determines the duration of a program’s validity</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Institution_Code__c</fullName>
        <label>Institution Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Name__c</fullName>
        <label>Originator Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Salesforce account object (channel partner type)</description>
        <label>Partner Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner UK, Partner HK, Partner SG, Partner PP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <description>AMP(or partner name) “Country code”. The name cannot be manually entered but it is automatically generated</description>
        <formula>TEXT(Country__c) &amp;&quot;-&quot;&amp;  Partner_name__r.Name</formula>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_2nd_person_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicates whether a second person approval is required for the approval of loans associated to this program. It will be used to drive the approval workflow in the disbursal tab</description>
        <label>Requires 2nd person approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Share_P__c</fullName>
        <description>Provides the percentage of revenue share agreed with the channel/bank revenue share agreement</description>
        <label>Revenue Share %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_share__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a revenue share agreement with a channel or bank partner is in place</description>
        <label>Revenue share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>It determines the duration of a program’s validity</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Programs</fullName>
        <columns>NAME</columns>
        <columns>Partner_name__c</columns>
        <columns>isActive__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Programs</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <recordTypes>
        <fullName>Asia</fullName>
        <active>true</active>
        <label>Asia</label>
    </recordTypes>
    <recordTypes>
        <fullName>Singapore</fullName>
        <active>true</active>
        <label>Singapore</label>
    </recordTypes>
    <recordTypes>
        <fullName>UK</fullName>
        <active>true</active>
        <label>UK</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidateRevenueShare</fullName>
        <active>true</active>
        <errorConditionFormula>Revenue_Share_P__c &gt; 1.0</errorConditionFormula>
        <errorDisplayField>Revenue_Share_P__c</errorDisplayField>
        <errorMessage>Number cannot be greater than 100</errorMessage>
    </validationRules>
</CustomObject>